wilma_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fiware
  #namespace: test
  labels:
    name: wilma
  name: wilma
spec:
  type: NodePort
  ports:
  - name: "5554"
    port: 5554
    nodePort: 30193
  selector:
    name: wilma
