ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  #namespace: fiware
  namespace: test
  name: wilma-service
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: wilma-service
            servicePort: 5554
